# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1257 2010-07-21 05:57:40 mp Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.0.0 beta1 (2010/??/??)
 - (2010/07/20) Fixed bug#4483 - AgentTicketActionCommon, set radio button when select
    old/ new owner are selected.
 - (2010/07/19) Fixed bug#5563 - Static statistic file StateAction is overwritten
    by an older version.
 - (2010/07/16) Removed support for the deprecated DTL commands <dtl if>, <dtl set>
    and <dtl system-call>. They were deprecated since OTRS 2.2.
 - (2010/07/15) Fixed bug#5416 - AgentTicketMove does not support Pending Date.
 - (2010/07/15) Fixed bug#5556 - Broken unicode chars in CustomerUser selections.
 - (2010/07/14) Fixed bug#5132 - New owner validation always ask to set a owner.
 - (2010/07/14) Fixed bug#5343 - Widespread typo in Agent-/CustomerPreferences - replaced "Activ"
                for "Active".
 - (2010/07/13) Fixed bug#5550 - Broken linebreaks in textareas of Google Chrome.
 - (2010/07/09) Fixed bug#5545 - LIKE pattern must not end with escape character.
 - (2010/07/09) Fixed bug#5494 - Handle attachments with java script.
 - (2010/07/09) Fixed bug#5544 - Wrong handling of underscore in LIKE
    search with oracle.
 - (2010/07/06) Removed AgentLookup (was not used in OTRS framework itself
     and is not state of the art of dealing with dynamic data any more).
 - (2010/07/01) Streamlined messages in AgentTicketBulk.
 - (2010/07/01) Added option to ticket bulk action to define if tickets for bulk
    action need to get locked for current agent or not.
     o Config Name: Ticket::Frontend::AgentTicketBulk###RequiredLock
    Thanks to Jeroen van Meeuwen!
 - (2010/06/22) Improved otrs.CheckModules.pl script.