@@ -2,7 +2,7 @@
 # Kernel/Modules/AgentTicketForward.pm - to forward a message
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: AgentTicketForward.pm,v 1.77 2010-07-13 21:17:45 cg Exp $
+# $Id: AgentTicketForward.pm,v 1.78 2010-07-21 13:21:31 ub Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -23,7 +23,7 @@ use Kernel::System::TemplateGenerator;
 use Mail::Address;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.77 $) [1];
+$VERSION = qw($Revision: 1.78 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -817,7 +817,7 @@ sub _Mask {
     # build next states string
     my %State;
     if ( !$Param{ComposeStateID} ) {
-        $State{Selected} = $Self->{Config}->{StateDefault};
+        $State{SelectedValue} = $Self->{Config}->{StateDefault};
     }
     else {
         $State{SelectedID} = $Param{ComposeStateID};
